Validaciones , Swagger, Middleware
