# api/app/controllers/v1/auth.controller.go
@@ -4,6 +4,7 @@ import (
 	"api/app/models/requests"
 	"api/app/services"
 	"api/pkg"
+	utils "api/utils/validator"
 	"net/http"
 	"strings"
 
@@ -24,16 +25,26 @@ type AuthControllerImpl struct {
 //	@BasePath	/api/v1
 
 // Iniciar Sesión
+//
 //	@Summary	Login
 //	@Tags		Auth
 //	@Accept		json
 //	@Param		Login	body	requests.LoginRequest	true	"login  request"
 //	@Produce	json
-//	@Success	200	{string}	token
+//	@Success	200	{string}	string
+//
+//	@Failure	400	{string}	string
+//	@Failure	500	{string}	string
+//
 //	@Router		/v1/auth/login/ [Post]
 func (ac *AuthControllerImpl) Login(c *gin.Context) {
 	var loginRequest requests.LoginRequest
 	if err := c.ShouldBindJSON(&loginRequest); err != nil {
+		c.JSON(http.StatusBadRequest, pkg.BuildResponse__(err.Error()))
+		return
+	}
+
+	if err := utils.ValidateRequest(loginRequest); err != nil {
 		c.JSON(http.StatusBadRequest, pkg.BuildResponse__(err.Error()))
 		return
 	}
@@ -47,11 +58,16 @@ func (ac *AuthControllerImpl) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, pkg.BuildResponse_("Operacion Exitosa", response))
 }
 
-//	@Summary	Me
-//	@Tags		Auth
-//	@Produce	json
-//	@Router		/v1/auth/me/ [Get]
-// @Security Bearer
+// @Summary	Me
+// @Tags		Auth
+// @Produce	json
+// @Router		/v1/auth/me/ [Get]
+// @Success	200	{object}	dto.UsuariosDTO
+//
+// @Failure	400	{string}	string
+// @Failure	401	{string}	string
+// @Failure	500	{string}	string
+// @Security	Bearer
 func (ac *AuthControllerImpl) Me(c *gin.Context) {
 
 	authHeader := c.GetHeader("Authorization")
@@ -63,12 +79,41 @@ func (ac *AuthControllerImpl) Me(c *gin.Context) {
 	c.JSON(http.StatusOK, pkg.BuildResponse_("Operacion Exitosa", user))
 }
 
+// Cerrar Sesion
+//
+//	@Summary	Logout
+//	@Tags		Auth
+//	@Produce	json
+//	@Success	200
+//
+//	@Failure	400	{string}	string
+//	@Failure	401	{string}	string
+//	@Failure	500	{string}	string
+//
+//	@Router		/v1/auth/logout/ [GET]
+//
+//	@Security	Bearer
 func (ac *AuthControllerImpl) Logout(c *gin.Context) {
 	ac.Logout(c)
 	c.JSON(http.StatusOK, pkg.BuildResponse__("Se cerro sesion con exito"))
 
 }
 
+// RefreshToken
+//
+//	@Summary	Refresh
+//	@Tags		Auth
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{string}	string
+//
+//	@Failure	400	{string}	string
+//	@Failure	401	{string}	string
+//	@Failure	500	{string}	string
+//
+//	@Router		/v1/auth/refresh/ [GET]
+//
+//	@Security	Bearer
 func (ac *AuthControllerImpl) Refresh(c *gin.Context) {
 	authHeader := c.GetHeader("Authorization")
 	tokenString := strings.Replace(authHeader, "Bearer ", "", 1)
