# api/docs/swagger.yaml
@@ -1,5 +1,48 @@
 basePath: /api
 definitions:
+  dto.UsuariosDTO:
+    properties:
+      apellidoMaterno:
+        type: string
+      apellidoPaterno:
+        type: string
+      createdAt:
+        type: string
+      email:
+        type: string
+      estatus:
+        type: integer
+      fechaNacimiento:
+        type: string
+      genero:
+        $ref: '#/definitions/migrations.Generos'
+      id:
+        type: integer
+      nombres:
+        type: string
+      rol:
+        $ref: '#/definitions/migrations.Roles'
+      telefono:
+        type: string
+      updatedAt:
+        type: string
+      urlimagen:
+        type: string
+    type: object
+  migrations.Generos:
+    properties:
+      descripcion:
+        type: string
+      id:
+        type: integer
+    type: object
+  migrations.Roles:
+    properties:
+      descripcion:
+        type: string
+      id:
+        type: integer
+    type: object
   requests.LoginRequest:
     properties:
       email:
@@ -33,24 +76,71 @@ paths:
           description: OK
           schema:
             type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Login
+      tags:
+      - Auth
+  /v1/auth/logout/:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Logout
       tags:
       - Auth
   /v1/auth/me/:
     get:
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UsuariosDTO'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       security:
       - Bearer: []
       summary: Me
       tags:
       - Auth
-  /v1/hw/:
+  /v1/auth/refresh/:
     get:
       consumes:
       - application/json
-      description: do ping
       produces:
       - application/json
       responses:
@@ -58,9 +148,23 @@ paths:
           description: OK
           schema:
             type: string
-      summary: ping example
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Refresh
       tags:
-      - example
+      - Auth
 securityDefinitions:
   Bearer:
     in: header
